--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,10 +21,10 @@ on:
 jobs:
   lint:
     name: lint
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+      - uses: actions/setup-go@v4
         with:
           go-version: v1.19
       - uses: golangci/golangci-lint-action@v2
@@ -38,7 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.19.x
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
           go-version: 1.19.x
         id: go
@@ -52,7 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.19.x
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
           go-version: 1.19.x
         id: go
@@ -63,12 +63,39 @@ jobs:
           make verify-manifests
   test_suite:
     name: Test Suite
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+      - uses: actions/setup-go@v4
         with:
           go-version: v1.19
       - name: Run suite
         run: |
           make test
+
+  e2e_test_suite:
+    name: E2E Test Suite
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v4
+        with:
+          go-version: "1.19"
+      - name: create controller-config.env
+        run: |
+          echo "AWS_DNS_PUBLIC_ZONE_ID=${{ secrets.AWS_DNS_PUBLIC_ZONE_ID }}" >> controller-config.env
+          echo "ZONE_ROOT_DOMAIN=${{ secrets.AWS_DNS_PUBLIC_ZONE_NAME }}" >> controller-config.env
+      - name: create aws-credentials.env
+        run: |
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> aws-credentials.env
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> aws-credentials.env
+          echo "AWS_REGION=${{ env.AWS_REGION }}" >> aws-credentials.env
+      - name: configure e2e test suite
+        run: |
+          export OCM_SINGLE=1
+          export TEST_HUB_NAMESPACE=multi-cluster-gateways
+          export TEST_HUB_KUBE_CONTEXT=kind-mgc-control-plane
+          export TEST_MANAGED_ZONE=${{ secrets.AWS_DNS_PUBLIC_ZONE_NAME }}
+      - name: Run suite
+        run: |
+          make local-setup && make test-e2e
