Rename everything in config/policy-controller to be consistent with normal kubebuilder/operatorsdk controller naming conventions. Update the default mgc overlay to allow specifying a different nameprefix for mgc (gateway) and policy components.
```
./bin/kustomize build config/default/ | yq .metadata.name
multicluster-gateway-controller-system
dnshealthcheckprobes.kuadrant.io
dnspolicies.kuadrant.io
dnsrecords.kuadrant.io
managedzones.kuadrant.io
tlspolicies.kuadrant.io
mgc-add-on-manager
mgc-controller-manager
mgc-policy-controller-manager
mgc-leader-election-role
mgc-policy-leader-election-role
mgc-kuadrant-addon
mgc-manager-role
mgc-metrics-reader
mgc-policy-dnsrecord-editor-role
mgc-policy-dnsrecord-viewer-role
mgc-policy-manager-role
mgc-proxy-role
mgc-leader-election-rolebinding
mgc-policy-leader-election-rolebinding
mgc-kuadrant-addon
mgc-manager-rolebinding
mgc-policy-manager-rolebinding
mgc-proxy-rolebinding
mgc-controller-manager-metrics-service
mgc-controller-manager
mgc-kuadrant-add-on-manager
mgc-policy-controller-manager
mgc-kuadrant-addon
mgc-policy-glbc-ca
```

--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,21 +1,6 @@
 
 namespace: multicluster-gateway-controller-system
 
-# Value of this field is prepended to the
-# names of all resources, e.g. a deployment named
-# "wordpress" becomes "alices-wordpress".
-# Note that it should also match with the prefix (text before '-') of the namespace
-# field above.
-namePrefix: mgc-
-
 resources:
-- ../rbac
-- ../manager
-- ../add-on-manager
-- ../policy-controller/default
-
-patches:
-- path: manager_metrics_patch.yaml
-
-patchesStrategicMerge:
-  - delete-kuadrant-system-ns-object.yaml
+- ./gateway-controller
+- ./policy-controller
