--- a/config/policy-controller/rbac/kustomization.yaml
+++ b/config/policy-controller/rbac/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 # subjects if changing service account names.
 - service_account.yaml
 - role.yaml
-- rolebinding.yaml
+- role_binding.yaml
 - leader_election_role.yaml
 - leader_election_role_binding.yaml
 - dnsrecord_editor_role.yaml
