--- a/config/policy-controller/rbac/leader_election_role.yaml
+++ b/config/policy-controller/rbac/leader_election_role.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: policy-controller-leader-election-role
+  name: leader-election-role
   namespace: system
 rules:
 - apiGroups:
