--- a/config/policy-controller/rbac/leader_election_role_binding.yaml
+++ b/config/policy-controller/rbac/leader_election_role_binding.yaml
@@ -2,12 +2,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:
-  name: policy-controller-leader-election-rolebinding
+  name: leader-election-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: policy-controller-leader-election-role
+  name: leader-election-role
 subjects:
-- kind: ServiceAccount
-  name: policy-controller
-  namespace: system
+  - kind: ServiceAccount
+    name: controller-manager
+    namespace: system
