--- a/config/policy-controller/rbac/role_binding.yaml
+++ b/config/policy-controller/rbac/role_binding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: policy-controller-rolebinding
+  name: manager-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: policy-role
+  name: manager-role
 subjects:
 - kind: ServiceAccount
-  name: policy-controller
+  name: controller-manager
   namespace: system
