--- a/config/add-on-manager/manager.yaml
+++ b/config/add-on-manager/manager.yaml
@@ -1,16 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kuadrant-add-on-manager
+  name: add-on-manager
   namespace: system
   labels:
     control-plane: kuadrant-add-on-manager
-    app.kubernetes.io/name: deployment
-    app.kubernetes.io/instance: kuadrant-add-on-manager
-    app.kubernetes.io/component: add-on-manager
-    app.kubernetes.io/created-by: kuadrant-add-on-manager
-    app.kubernetes.io/part-of: kuadrant
-    app.kubernetes.io/managed-by: kustomize
 spec:
   selector:
     matchLabels:
