--- a/config/policy-controller/rbac/role.yaml
+++ b/config/policy-controller/rbac/role.yaml
@@ -32,6 +32,7 @@ rules:
   verbs:
   - get
   - list
+  - watch
 - apiGroups:
   - cert-manager.io
   resources:
@@ -39,6 +40,7 @@ rules:
   verbs:
   - get
   - list
+  - watch
 - apiGroups:
   - cluster.open-cluster-management.io
   resources:
